// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageFeature > renders with as correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</section>"
`;

exports[`pageFeature > renders with class correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="rounded-xl">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with default slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`pageFeature > renders with description correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with description slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description slot</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageFeature > renders with leading slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class="">Leading slot</div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with title correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title</div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageFeature > renders with title slot correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="">Title slot</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;

exports[`pageFeature > renders with to correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="wrapper" class=""><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Feature link" class="peer focus:outline-none"><span class="inset-0 absolute" aria-hidden="true"></span></a>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;

exports[`pageFeature > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
  <div data-slot="wrapper" class="">
    <!--v-if-->
    <div data-slot="title" class="font-bold">Title</div>
    <div data-slot="description" class="">Description</div>
  </div>
</div>"
`;
